--- a/Example/BubblePicker/Base.lproj/Main.storyboard
+++ b/Example/BubblePicker/Base.lproj/Main.storyboard
@@ -1,25 +1,64 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="BubblePicker_Example" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What are your tastes?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OV7-SZ-KQn">
+                                <rect key="frame" x="26" y="30" width="323" height="43"/>
+                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="36"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tell us your tastes so we can create better recommendations for you" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zyb-jJ-H1y">
+                                <rect key="frame" x="40" y="83" width="295" height="41"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="25t-CY-ULU">
+                                <rect key="frame" x="0.0" y="120" width="375" height="547"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="25t-CY-ULU" secondAttribute="trailing" id="3ju-vG-kMh"/>
+                            <constraint firstItem="zyb-jJ-H1y" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="4kI-Cc-e6V"/>
+                            <constraint firstItem="zyb-jJ-H1y" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="40" id="6AZ-Wq-WCc"/>
+                            <constraint firstItem="25t-CY-ULU" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="100" id="7sa-LZ-ib2"/>
+                            <constraint firstItem="OV7-SZ-KQn" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" constant="30" id="Dq4-MP-eid"/>
+                            <constraint firstItem="zyb-jJ-H1y" firstAttribute="top" secondItem="OV7-SZ-KQn" secondAttribute="bottom" constant="10" id="co5-5J-p5X"/>
+                            <constraint firstItem="25t-CY-ULU" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="fQd-eG-l6e"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="25t-CY-ULU" secondAttribute="bottom" id="g5u-Bf-ObD"/>
+                            <constraint firstAttribute="trailing" secondItem="zyb-jJ-H1y" secondAttribute="trailing" constant="40" id="hKn-ck-soU"/>
+                            <constraint firstItem="OV7-SZ-KQn" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="jf9-Fa-z3r"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="bubblePicker" destination="25t-CY-ULU" id="rvh-8p-Ynk"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
         </scene>
     </scenes>
 </document>
